--- a/package.json
+++ b/package.json
@@ -11,16 +11,45 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "docker:dev": "docker-compose up --build",
+    "docker:dev:detached": "docker-compose up --build -d",
+    "docker:dev:local": "docker-compose -f docker-compose.local.yml up --build -d",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build -d",
+    "docker:stop": "docker-compose down",
+    "docker:stop:prod": "docker-compose -f docker-compose.prod.yml down",
+    "docker:clean": "docker-compose down -v --remove-orphans && docker system prune -f",
+    "docker:logs": "docker-compose logs -f",
+    "docker:logs:app": "docker-compose logs -f app",
+    "docker:setup": "node scripts/docker-setup.js",
+    "docker:setup:linux": "bash scripts/dev-setup.sh",
+    "docker:shell": "docker-compose exec app sh",
+    "docker:db:migrate": "docker-compose exec app npx prisma migrate dev",
+    "docker:db:push": "docker-compose exec app npx prisma db push",
+    "docker:db:seed": "docker-compose exec app npm run db:seed",
+    "docker:db:studio": "docker-compose exec app npx prisma studio --browser none --port 5555",
+    "docker:db:generate": "docker-compose exec app npx prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "chartjs": "^0.3.24",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "recharts": "^3.1.2",
     "zod": "^4.1.5"
   },
   "devDependencies": {
