--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
