--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,85 +1,62 @@
-# Spencer Denim Task Manager - Development Environment (Supabase Version)
-version: '3.8'
+# Spencer Denim Task Manager - Complete Development Environment
 
 services:
-  # Redis for Caching (Optional - for future scaling)
+  postgres:
+    image: postgres:16-alpine
+    container_name: spencer-postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: spencer_taskmanager
+      POSTGRES_USER: spencer_admin
+      POSTGRES_PASSWORD: SpencerDenim2024!
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - spencer-network
+
   redis:
     image: redis:7-alpine
-    container_name: spencer-denim-redis
+    container_name: spencer-redis
+    restart: unless-stopped
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
       - spencer-network
-    restart: unless-stopped
     command: redis-server --appendonly yes
 
-  # Next.js Application (Development) - Enhanced networking for external DB access
   app:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: spencer-denim-app
+    container_name: spencer-app
+    restart: unless-stopped
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=postgresql://postgres:khabibnurmagomedoV@db.xfzkkmbidevzowixapuh.supabase.co:5432/postgres?sslmode=prefer
+      - DATABASE_URL=postgresql://spencer_admin:SpencerDenim2024!@postgres:5432/spencer_taskmanager?sslmode=disable
       - REDIS_URL=redis://redis:6379
-      - NEXT_TELEMETRY_DISABLED=1
-      - NEXTAUTH_SECRET=your-development-secret-key-change-in-production
+      - NEXTAUTH_SECRET=spencer-denim-super-secret-key-change-in-production-2024
       - NEXTAUTH_URL=http://localhost:3000
-      - APP_NAME=Spencer Denim Task Manager
-      - APP_VERSION=1.0.0
-      - APP_ENVIRONMENT=development
+      - NEXT_TELEMETRY_DISABLED=1
     ports:
       - "3000:3000"
     volumes:
       - .:/app
       - /app/node_modules
       - /app/.next
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    networks:
+      - spencer-network
     depends_on:
+      - postgres
       - redis
-    networks:
-      - spencer-network
-    restart: unless-stopped
-    develop:
-      watch:
-        - action: sync
-          path: ./src
-          target: /app/src
-        - action: sync
-          path: ./prisma
-          target: /app/prisma
-        - action: rebuild
-          path: package.json
-
-  # pgAdmin for Database Management (works with Supabase too)
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: spencer-denim-pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@spencerdenim.com
-      PGADMIN_DEFAULT_PASSWORD: admin123
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
-    ports:
-      - "5050:80"
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
-    networks:
-      - spencer-network
-    restart: unless-stopped
-
-volumes:
-  redis_data:
-    driver: local
-  pgadmin_data:
-    driver: local
 
 networks:
   spencer-network:
     driver: bridge
+
+volumes:
+  postgres_data:
+  redis_data:
