--- a/package.json
+++ b/package.json
@@ -12,23 +12,19 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
+    "docker:full": "docker-compose --env-file .env.docker up --build -d",
     "docker:dev": "docker-compose up --build",
     "docker:dev:detached": "docker-compose up --build -d",
-    "docker:dev:local": "docker-compose -f docker-compose.local.yml up --build -d",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up --build -d",
     "docker:stop": "docker-compose down",
     "docker:stop:prod": "docker-compose -f docker-compose.prod.yml down",
     "docker:clean": "docker-compose down -v --remove-orphans && docker system prune -f",
     "docker:logs": "docker-compose logs -f",
-    "docker:logs:app": "docker-compose logs -f app",
-    "docker:setup": "node scripts/docker-setup.js",
-    "docker:setup:linux": "bash scripts/dev-setup.sh",
-    "docker:shell": "docker-compose exec app sh",
+    "docker:setup": "powershell -ExecutionPolicy Bypass -File scripts\\docker-full-setup.ps1",
+    "docker:setup:linux": "bash scripts/docker-full-setup.sh",
     "docker:db:migrate": "docker-compose exec app npx prisma migrate dev",
-    "docker:db:push": "docker-compose exec app npx prisma db push",
     "docker:db:seed": "docker-compose exec app npm run db:seed",
-    "docker:db:studio": "docker-compose exec app npx prisma studio --browser none --port 5555",
-    "docker:db:generate": "docker-compose exec app npx prisma generate"
+    "docker:db:studio": "docker-compose exec app npx prisma studio --browser none --port 5555"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
