--- a/package.json
+++ b/package.json
@@ -12,19 +12,15 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
-    "docker:full": "docker-compose --env-file .env.docker up --build -d",
+    "docker:supabase": "docker-compose up --build -d",
+    "docker:local": "docker-compose -f docker-compose.local.yml up --build -d",
     "docker:dev": "docker-compose up --build",
     "docker:dev:detached": "docker-compose up --build -d",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up --build -d",
     "docker:stop": "docker-compose down",
-    "docker:stop:prod": "docker-compose -f docker-compose.prod.yml down",
+    "docker:stop:local": "docker-compose -f docker-compose.local.yml down -v",
     "docker:clean": "docker-compose down -v --remove-orphans && docker system prune -f",
-    "docker:logs": "docker-compose logs -f",
-    "docker:setup": "powershell -ExecutionPolicy Bypass -File scripts\\docker-full-setup.ps1",
-    "docker:setup:linux": "bash scripts/docker-full-setup.sh",
-    "docker:db:migrate": "docker-compose exec app npx prisma migrate dev",
-    "docker:db:seed": "docker-compose exec app npm run db:seed",
-    "docker:db:studio": "docker-compose exec app npx prisma studio --browser none --port 5555"
+    "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
@@ -48,6 +44,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "recharts": "^3.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.5"
   },
   "devDependencies": {
@@ -56,6 +53,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "prisma": "^6.15.0",
