sqllite db added. an external feature

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
+    "db:sqlite:generate": "prisma generate --schema=prisma/schema-sqlite.prisma",
+    "db:sqlite:push": "prisma db push --schema=prisma/schema-sqlite.prisma",
+    "db:sqlite:seed": "tsx prisma/sqlite-seed.ts",
+    "db:sqlite:studio": "prisma studio --schema=prisma/schema-sqlite.prisma",
     "docker:supabase": "docker-compose up --build -d",
     "docker:local": "docker-compose -f docker-compose.local.yml up --build -d",
     "docker:dev": "docker-compose up --build",
