--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@prisma/client": "^6.15.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.13",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.2.0",
     "chart.js": "^4.5.0",
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
@@ -43,6 +45,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
+    "node-fetch": "^2.7.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
